--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
 
 .header .info span {
     text-align: center;
+
 }
 
 .header .info i {
@@ -54,7 +55,6 @@ body {
 .platforms {
     display: flex;
 }
-
 .platform {
     display: flex;
     flex-direction: column;
@@ -74,7 +74,8 @@ body {
     margin-top: 4rem;
     font-weight: 400;
     font-size: 2rem;
-    width: 27rem;
+    width: 480px;
+    padding: 0 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -105,6 +106,9 @@ body {
     font-weight: 700;
     cursor: pointer;
 }
+.buttons a:nth-child(2){
+    margin: 0 20px;
+}
 
 .buttons a:hover {
     opacity: .8;
@@ -115,6 +119,11 @@ body {
     color: #fff;
 }
 
+.buttons a.github-link{
+    padding: 0px;
+    border: none;
+    fill: #46abe4;
+}
 .footer {
     display: flex;
     justify-content: center;
