--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -42,3 +42,6 @@ a
  * Here you would add any custom utilities you need that don't come out of the
  * box with Tailwind.
  */
+
+.cursor-default
+    cursor: default
